landscape and portrait, translation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,14 @@
 <resources>
-    <string name="app_name">Projekat</string>
+    <string name="app_name" translatable="false">Projekat</string>
     <string name="title">About app</string>
-    <string name="intro">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec dolor nec ex tempus feugiat non id ligula. Suspendisse elit velit.</string>
+    <string name="intro">Salesman app.</string>
     <string name="text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec dolor nec ex tempus feugiat non id ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec dolor nec ex tempus feugiat non id ligula. Suspendisse elit velit, fermentum vel justo a, volutpat malesuada libero.</string>
-    <string name="welcome">Welcome</string>
-    <string name="subtitle">Let\'s begin your journey!</string>
-    <string name="start">Start</string>
-    <string name="menu">Menu</string>
-    <string name="cites">List of cites</string>
-    <string name="about">About app</string>
-    <string name="seemore">See more</string>
+       Using this app you can easly see list of cities, see them on the map.Calculate the shortest route and much more.</string>
+    <string name="welcome" translatable="false">Welcome</string>
+    <string name="subtitle" translatable="false">Let\'s begin your journey!</string>
+    <string name="start" translatable="false">Start</string>
+    <string name="menu" translatable="false">Menu</string>
+    <string name="cites" translatable="false">List of cites</string>
+    <string name="about" translatable="false">About app</string>
+    <string name="seemore" translatable="false">See more</string>
 </resources>
