app bar, side menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="cites" translatable="false">List of cites</string>
     <string name="about" translatable="false">About app</string>
     <string name="seemore" translatable="false">See more</string>
+    <string name="findroute" translatable="false">Find route</string>
 </resources>
