--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="about" translatable="false">About app</string>
     <string name="seemore" translatable="false">See more</string>
     <string name="findroute" translatable="false">Find route</string>
+    <string name="seemap" translatable="false">See it on the map</string>
 </resources>
