Prikaz najkrace rute na mapi

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="findroute" translatable="false">Find route</string>
     <string name="seemap" translatable="false">See it on the map</string>
     <string name="algorithm" translatable="false">Go to algorithm</string>
+    <string name="description" translatable="false">Izabrani grad</string>
+    <string name="startA" translatable="false">START ALGORITHM</string>
 </resources>
